objects/ssot__FulfillmentOrderProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfilledQuantity__c</fullName>
        <label>Fulfilled Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderId__c</fullName>
        <label>Fulfillment Order</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GrandTotalAmount__c</fullName>
        <label>Grand Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GrossUnitPrice__c</fullName>
        <label>Gross Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Order Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderedQuantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalSalesOrderProductId__c</fullName>
        <label>Original Sales Order Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductAmount__c</fullName>
        <label>Product Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProvisioningDate__c</fullName>
        <label>Provisioning Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitOfMeasure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedEndDate__c</fullName>
        <label>Requested End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedStartDate__c</fullName>
        <label>Requested Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductId__c</fullName>
        <label>Sales Order Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentTaxAmount__c</fullName>
        <label>Total Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalLineAmountWithTax__c</fullName>
        <label>Total Line Amount With Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalOrderProductAdjTaxAmount__c</fullName>
        <label>Total Order Product Adj Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAdjAmount__c</fullName>
        <label>Total Product Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAdjTaxAmount__c</fullName>
        <label>Total Product Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductDstribAdjAmount__c</fullName>
        <label>Total Product Distributed Adj Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductDstribAdjTaxAmount__c</fullName>
        <label>Total Product Distributed Adj Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductTaxAmount__c</fullName>
        <label>Total Product Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmount__c</fullName>
        <label>Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761213946_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderProduct_FulfillmentO_rel</label>
        <referenceTo>ssot__FulfillmentOrder__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderProduct_FulfillmentO_rel</relationshipLabel>
        <relationshipName>rel_1697761213946_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214184_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderProduct_OriginalSale_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderProduct_OriginalSale_rel</relationshipLabel>
        <relationshipName>rel_1697761214184_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214256_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrderProduct_SalesOrderPr_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrderProduct_SalesOrderPr_rel</relationshipLabel>
        <relationshipName>rel_1697761214256_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>